# dl-practice

./: .gitattributes  .gitignore  main.py  pyproject.toml  secret.key
models/: best_model.pth  lenet_cnn.pth  lenet_model.pth
notebook/: 경사하강법.ipynb
notebook/homework/: 김경표_mnist.ipynb
notebook/lecture/: wd_day7_mnist기초.ipynb  wd_day7_파이토치_기초.ipynb  wd_mnist.ipynb  wd_torch.ipynb
notebook/lecture_practice/: client.ipynb  fine_tuning.ipynb  hyperparmaters.ipynb  hyperparmaters.py  lenet.ipynb  mnist.ipynb  model_load.ipynb  torch_01.ipynb  tutorial.ipynb  use_model.ipynb  wd_day6_경사하강법.ipynb
notebook/practice/: Classification_skin_diseases.ipynb  grad_cam.ipynb  skin_diseases.ipynb
output/convnext_tiny/20260224_215426/: best_model.pth  events.out.tfevents.1771937666.KyungPyos-MacBook-Pro-2.local.58269.1
output/convnext_tiny/20260224_221717/: best_model.pth  events.out.tfevents.1771939037.KyungPyos-MacBook-Pro-2.local.58269.3
output/convnext_tiny/20260224_225253/: best_model.pth  events.out.tfevents.1771941173.KyungPyos-MacBook-Pro-2.local.60421.4
output/convnext_tiny/20260224_230814/: best_model.pth  events.out.tfevents.1771942094.KyungPyos-MacBook-Pro-2.local.61265.1
output/efficientnet_v2_s/20260224_231408/: best_model.pth  events.out.tfevents.1771942448.KyungPyos-MacBook-Pro-2.local.61265.2
output/resnet34/20260224_210222/: events.out.tfevents.1771934542.KyungPyos-MacBook-Pro-2.local.56244.0
output/resnet34/20260224_210622/: best_model.pth  events.out.tfevents.1771934782.KyungPyos-MacBook-Pro-2.local.56244.1
output/resnet34/20260224_213447/: events.out.tfevents.1771936487.KyungPyos-MacBook-Pro-2.local.56244.2
output/resnet34/20260224_213607/: events.out.tfevents.1771936567.KyungPyos-MacBook-Pro-2.local.56244.3
output/resnet34/20260224_215138/: best_model.pth  events.out.tfevents.1771937498.KyungPyos-MacBook-Pro-2.local.58269.0
output/resnet34/20260224_220508/: best_model.pth  events.out.tfevents.1771938308.KyungPyos-MacBook-Pro-2.local.58269.2
output/resnet34/20260224_222746/: events.out.tfevents.1771939666.KyungPyos-MacBook-Pro-2.local.58269.4
output/resnet34/20260224_223041/: events.out.tfevents.1771939841.KyungPyos-MacBook-Pro-2.local.60421.0
output/resnet34/20260224_223242/: best_model.pth  events.out.tfevents.1771939962.KyungPyos-MacBook-Pro-2.local.60421.1
output/resnet34/20260224_223529/: best_model.pth  events.out.tfevents.1771940129.KyungPyos-MacBook-Pro-2.local.60421.2
output/resnet34/20260224_224143/: best_model.pth  events.out.tfevents.1771940503.KyungPyos-MacBook-Pro-2.local.60421.3
output/resnet34/20260224_230005/: best_model.pth  events.out.tfevents.1771941605.KyungPyos-MacBook-Pro-2.local.61265.0
output/tensorboard/: events.out.tfevents.1771834783.BOOK-7QC9PH13A8.59996.4
output/tensorboard/ResNet34/20260224/: events.out.tfevents.1771927213.BOOK-7QC9PH13A8.66068.5
src/: classfied_actors.py  streamlit_sample.py
src/lib/: dataset.py  model.py  path.py  secret_key.py  train.py  transform.py
src/lib/skin_disease/: __init__.py  data_module.py  model_factory.py  test_model.py  trainer.py  trainer_v2.py
